--- a/frontend/src/styles/pages/people.scss
+++ b/frontend/src/styles/pages/people.scss
@@ -48,9 +48,10 @@
     .menu__cursor {
         width: 200px;
         height: 200px;
-        // background-blend-mode: difference;
         // isolation: isolate;
         opacity: 1;
+        z-index: 600;
+
     }
     .cursorText {
         user-select: none;
