add mobile for home page

--- a/frontend/src/styles/components/menu.scss
+++ b/frontend/src/styles/components/menu.scss
@@ -9,7 +9,7 @@
     padding-left: 100px;
     z-index: 1;
     box-sizing: border-box;
-    transition:  backgroundColor 0.3s ease-in-out;
+    transition:  background-color 0.3s ease-in-out;
     &:after {
         display: none;
         content: 
