--- a/frontend/src/styles/style.scss
+++ b/frontend/src/styles/style.scss
@@ -6,6 +6,7 @@
 
 // components
 @import 'components/menu';
+@import 'components/menuMobile';
 @import 'components/header';
 @import 'components/backButton';
 @import 'components/loadingScreen';
@@ -17,6 +18,7 @@
 @import 'components/bigTitle';
 @import 'components/sunshines';
 @import 'components/ball';
+
 
 // pages
 @import 'pages/home';
