--- a/frontend/src/styles/components/menu.scss
+++ b/frontend/src/styles/components/menu.scss
@@ -90,3 +90,11 @@
     mix-blend-mode: difference;
     isolation: isolate;
 }
+
+.menu__cursor--about {
+    position: fixed;
+    z-index: 900;
+    cursor: none;
+    width: 40px;
+    height: 40px;
+}
