--- a/frontend/src/styles/pages/about.scss
+++ b/frontend/src/styles/pages/about.scss
@@ -19,6 +19,8 @@
     }
 }
 .about__container {
+    cursor: none;
+    position: relative;
     width: 100vw;
     box-sizing: border-box;
     padding: 45vh 15vw 0 10vw;
