--- a/frontend/src/styles/components/menuMobile.scss
+++ b/frontend/src/styles/components/menuMobile.scss
@@ -34,7 +34,7 @@
 
 .menuMobile__containerImg {
     width: 100vw;
-    height: 60vh;
+    height: 100vw;
     object-fit: contain;
     a {
         font-size: 40px;
