--- a/frontend/src/styles/general/theme-animations.scss
+++ b/frontend/src/styles/general/theme-animations.scss
@@ -8,20 +8,43 @@
     to { transform: rotateZ(360deg) ; } 
 }
 @keyframes translateGotBoredTop { 
-    from { transform: translate3d(-25px, -25px, 1px); } 
-    to { transform: translate3d(-50px, -50px, 1px) ; } 
+    0% { transform: translate3d(0px, 0px, 1px) ; } 
+    50% { transform: translate3d(-25px, -25px, 1px); } 
+    100% { transform: translate3d(-50px, -50px, 1px) ; } 
 }
+@keyframes translateGotBoredTopReverse { 
+    0% { transform: translate3d(-50px, -50px, 1px) ; } 
+    50% { transform: translate3d(-25px, -25px, 1px); } 
+    100% { transform: translate3d( 0px, 0px, 1px) ; }
+}
+@keyframes translateGotBoredTopMobile { 
+    0% { transform: translate3d(-0px, -0px, 1px); } 
+    50% { transform: translate3d(-11px, -11px, 1px); } 
+    100% { transform: translate3d(-22px, -22px, 1px) ; } 
+}
+@keyframes translateGotBoredTopMobileReverse { 
+    0% { transform: translate3d(-22px, -22px, 1px) ; } 
+    50% { transform: translate3d(-11px, -11px, 1px); } 
+    100% { transform: translate3d(-0px, -0px, 1px); } 
+}
+
+
 @keyframes translateGotBoredMiddle { 
     from { transform: translate3d(0,0,1px) ; } 
     to { transform: translate3d(-25px, -25px, 1px) ; } 
 }
-@keyframes translateGotBoredTopMobile { 
-    from { transform: translate3d(-11px, -11px, 1px); } 
-    to { transform: translate3d(-22px, -22px, 1px) ; } 
+@keyframes translateGotBoredMiddleReverse { 
+    from { transform: translate3d(-25px, -25px, 1px) ; } 
+    to { transform: translate3d(0,0,1px) ; } 
 }
+
 @keyframes translateGotBoredMiddleMobile { 
     from { transform: translate3d(0,0,1px) ; } 
     to { transform: translate3d(-11px, -11px, 1px) ; } 
+}
+@keyframes translateGotBoredMiddleMobileReverse { 
+    from { transform: translate3d(-11px, -11px, 1px) ; } 
+    to { transform: translate3d(0,0,1px) ; } 
 }
 
 @keyframes opacity{ 
