--- a/frontend/src/styles/components/nextProject.scss
+++ b/frontend/src/styles/components/nextProject.scss
@@ -15,7 +15,10 @@
         font-size: 2.3rem;
         text-align: center;
         // transform: translateY(30%);
-
+        @include tablet {
+            width: 70%;
+            font-size: 1.8rem;
+        }
     }
     a {
         color: $yellow;
