--- a/frontend/src/styles/components/menuMobile.scss
+++ b/frontend/src/styles/components/menuMobile.scss
@@ -18,7 +18,7 @@
 
 .menuMobile__about {
     position: absolute;
-    bottom: 6vh;
+    bottom: 65px;
     left: 20px;
     font-weight: 600;
     font-size: 18px!important;
@@ -26,7 +26,7 @@
 
 .menuMobile__numerotation {
     position: absolute;
-    bottom: 6vh;
+    bottom: 65px;
     right: 20px;
     font-weight: 600;
     font-size: 18px!important;
