--- a/frontend/src/styles/pages/about.scss
+++ b/frontend/src/styles/pages/about.scss
@@ -16,6 +16,7 @@
     text-align: center;
     @include tablet {
         width: 80%;
+        font-size: 1.2rem;
     }
 }
 .about__container {
@@ -34,6 +35,12 @@
         height: 440px;
         &:nth-child(odd){
             align-self: flex-end;
+        }
+
+        @include tablet {
+            margin-top: 70px;
+            width: 150px;
+            height: auto;
         }
     }
 }
