change things on time line vietnam

--- a/frontend/src/styles/components/menuMobile.scss
+++ b/frontend/src/styles/components/menuMobile.scss
@@ -9,7 +9,7 @@
 }
 
 .menuMobile__containerInfos {
-    height: 40vh;
+    height: 40%;
     position: relative;
     padding-top: 60px;
     text-align: center;
@@ -34,7 +34,7 @@
 
 .menuMobile__containerImg {
     width: 100vw;
-    height: 100vw;
+    height: 60%;
     object-fit: contain;
     a {
         font-size: 40px;
